添加绑定商品页面

--- a/icepointadmin/img/page.css
+++ b/icepointadmin/img/page.css
@@ -1025,3 +1025,16 @@ a.a-sopop-cancel span.s-sopop-btn {
 .error {
     color: red;
 }
+
+.autocomplete-suggestion {
+    padding: 3px;
+    cursor: pointer;
+}
+
+.autocomplete-suggestion:hover {
+    background-color: #eee;
+}
+
+#modal .row {
+    padding-left: 50px;
+}
