添加评论列表

--- a/icepointadmin/img/page.css
+++ b/icepointadmin/img/page.css
@@ -628,3 +628,11 @@ a.btn {
 .auths label.checkall {
     float: right;
 }
+
+.mh td{
+    height: 40px;
+}
+.mh .comment span{
+    display: inline-block;
+    margin: 0 10px;
+}
