添加会员列表

--- a/qianye/img/page.css
+++ b/qianye/img/page.css
@@ -636,3 +636,9 @@ a.btn {
     display: inline-block;
     margin: 0 10px;
 }
+
+.header {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
